--- a/Sales.html
+++ b/Sales.html
@@ -75,6 +75,9 @@
             <li id="nav-data" class="">
             <a href="./Events.html">Events</a>
             </li>
+          <li id="nav-data" class="">
+            <a href="./Gallery.html">Gallery</a>
+            </li>
 			<li id="nav-data" class="">
             <a href="./Sale.html">Sale</a>
 			</li>
@@ -101,14 +104,14 @@
 
             <div class="main-container">
 			<div class="grid-span">
-	  		The next phase of development is to design and make my own engine. Sand cast crankcases will require some savings to buy the necessary kit for the job. So I am putting up for sale some of the rare excotic race parts I have been using so far to generate the funding. Keep an eye out in the coming future for more special parts up for sale.
+	  		My next challenge is to design and make my own engine. Sand casting crankcases will require some savings to buy the necessary kit for the job. So I am putting up for sale some of the rare excotic race parts I have used to generate the funding. Keep an eye out in the coming future for more special parts up for sale.
       </div>
 			
 			
       <div class="grid-span">
-        <h2>Tony Scott 52mm stroke crankshaft</h2>
-		This is supposidly the one remaining long stroke crankshaft; designed by Tony Scott and made by Honda on his behalf. Used by Milky Quale in the isle of man TT and most recently used by Tom Parkes between 2017-2018. It has now been put up for sale to fund the manufacture of shorter stroke; higher revving crankshaft.
-		What you get is the 52mm stroke crankshaft complete with Carrilo rods and bearing shells. The rods have completed approximately 100 race miles from new along with 4 hours of dyno tuning. They were custom made to my design by Carillo in America for £2000
+        <h2>Tony Scott RC45 52mm stroke crankshaft</h2>
+		This is supposidly the one remaining long stroke RC45 crankshaft; designed by Tony Scott and made by Honda on his behalf. Used by Milky Quale in the isle of man TT and most recently used by myself between 2017-2018. It has now been put up for sale to fund the manufacture of shorter stroke; higher revving engine.
+		What you get is the 52mm stroke crankshaft complete with Carrilo rods and bearing shells. The rods have completed approximately 100 race miles from new along with 4 hours of dyno tuning. They were custom made to my design by Carillo in America for £2000 but are suitable to take both standard and HRC RC45 pistons. The crankshaft is dynamically balanced with lead inserts into the counterweights to suit these rods and HRC pistons
 			<div class="banner">
 			<div class="banner2">
 			<a target="_blank" href="img/52mmcrank2.jpg">
@@ -130,7 +133,7 @@
 	  The specification of the lift:<pr>
 	  Exhaust: 8.5mm <pr>
 	  Inlet: 9.5mm <pr>
-	  Be advised that you should check your piston to valve clearance on assembly to ensure adequate clearance for your application as the inlet in particular has much higher lift than standard
+	  Be advised that you should check your piston to valve clearance on assembly to ensure adequate clearance for your application as the inlet in particular has higher lift than standard
 	  The cam sprockets are interchangable between front and rear sprockets and allow material to be skimmed off the cylinder head to reduce gear backlash and raise compression. This is achieved due to the cam sprockets being marginally undersize. The amount they are undersize is stamped on each sprocket (0.5mm and 0.6mm options). The sprockets are interchangable between inlet and exhaust aswell as between front and rear cylinder heads.
 			<div class="banner">
 			<div class="banner2">
