--- a/Techjournals.html
+++ b/Techjournals.html
@@ -74,6 +74,9 @@
             <li id="nav-data" class="">
               <a href="./Events.html">Events</a>
             </li>
+            <li id="nav-data" class="">
+            <a href="./Gallery.html">Gallery</a>
+            </li>
 			<li id="nav-data" class="">
             <a href="./Sale.html">Sale</a>
 			</li>
