--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
             <li id="nav-data" class="">
             <a href="./Events.html">Events</a>
             </li>
+          <li id="nav-data" class="">
+            <a href="./Gallery.html">Gallery</a>
+            </li>
 			<li id="nav-data" class="">
             <a href="./Sale.html">Sale</a>
 			</li>
@@ -86,22 +89,22 @@
 
     <div id="intro-background">
       <div id="title1-light">The story behind the development</div>
-      <div class="narrow-content" style="color:#ffffff">The technical diary</div>
+      <div class="narrow-content" style="color:#ffffff">A technical diary</div>
     </div>
 
     <div id="content-background">
-      <div id="title1">An alternative approach to road racing</div>
+      <div id="title1">A road race motorcycle designed and built by Tom Parkes</div>
 
       <div class='container2'>
         <div class="col1">
           <i class="fa fa-road fa-5x" style="color:#00bcd4"></i>
           <h2>Raced at the toughest race track in the world</h2>
-          <div>Where better to develop a prototype chassis with a unique suspension design than in between stone walls on public roads?</div>
+          <div>Where better to develop a prototype chassis with a unique suspension design than in the isle of man</div>
           <p style="margin-top:1em">
             <a href="./Introduction.html">
-              <button>
-                Read the reports
-              </button>
+               <div class="button">
+              Read the reports
+	             </div>
             </a>
           </p>
         </div>
