--- a/Gallery.html
+++ b/Gallery.html
@@ -255,7 +255,7 @@
 			<div class="gallery">
 			<a target="_blank" href="img/engine2.jpg">
 			<img src="img/engine2.jpg" alt="Parts"></a>
-			<span class="desc">Guy Martin and Tom</span>
+			<span class="desc">Paddock Pic IOM</span>
 			</div>
 			<div class="gallery">
 			<a target="_blank" href="img/exhaust_with_strap2.jpg">
