--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     <script type='text/javascript' src="scripts/script.js"></script>
     <script type="text/javascript" src="slick/slick.js"></script>
     <script type="text/javascript" src="scripts/index.js"></script>
-
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css"></script>
+    
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
   </head>
   <body id="body">
@@ -101,62 +103,21 @@
           <h2>Raced at the toughest race track in the world</h2>
           <div>Where better to develop a prototype chassis with a unique suspension design than in the isle of man</div>
           <p style="margin-top:1em">
-            <a href="./Introduction.html">
-               <div class="button">
-              Read the reports
-	             </div>
+            
+            <a> href="./Introduction.html"
+            <div class="share-button">
+               Read The Reports
+            </div>
             </a>
-          </p>
+            </p>
         </div>
       </div>
 
     </div>
 
     <div id="footer-background">
-      <p>
-        <span style="font: 3.5em 'Oswald', sans-serif">
-          PARKES
-        </span>
-        <br>
-        The Road Race Motorcycle
-      </p>
-
-      <div class="carousel-container">
-        <div class="slider-parkes">
-          <div class="slider-item">
-            <img src="img/paddock1.jpg" class="slider-image" alt="">
-            <div class="slider-text">
-              2017 chassis - Isle of Man
-            </div>
-          </div>
-          <div class="slider-item">
-            <img src="img/002.jpg" class="slider-image" alt="">
-            <div class="slider-text">
-              2016 Plumbing the 8 fuel injectors
-            </div>
-          </div>
-          <div class="slider-item">
-            <img src="img/southern3.jpg" class="slider-image" alt="">
-            <div class="slider-text">
-              Church bends 2016
-            </div>
-          </div>
-          <div class="slider-item">
-            <img src="img/main.jpg" class="slider-image" alt="">
-            <div class="slider-text">
-              2017 - Now with linear rising rate
-            </div>
-          </div>
-          <div class="slider-item">
-            <img src="img/churchbends16.jpg" class="slider-image" alt="">
-            <div class="slider-text">
-              2016 - Hugging the wall on church bends
-            </div>
-          </div>
-        </div>
+          <p> <span style="font: 3.5em 'Oswald', sans-serif"> PARKES </span> <br> The Road Race Motorcycle </p>
       </div>
-
-    </div>
     <div class="grid-wide-center">
       <h6>Photo courtesy of Dave Kneen Photography</h6>
     </div>
