--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
 			<li id="nav-support" class="dropdown">
               <a href="./Techjournals.html" class="dropbtn">Tech Journals</a>
             <div class="dropdown-content">
-			<a href="./Chassis.html" >Chassis</a>
-            <a href="./Swingarm.html" >Swingarm</a>
-            <a href="./Engine.html" >Engine</a>
-            <a href="./Aero.html" >Aero</a>
-            <a href="./Cooling.html" >Cooling</a>
-            <a href="./exhausts.html" >Exhausts</a>
+			<a href="./Chassis.html">Chassis</a>
+            <a href="./Swingarm.html">Swingarm</a>
+            <a href="./Engine.html">Engine</a>
+            <a href="./Aero.html">Aero</a>
+            <a href="./Cooling.html">Cooling</a>
+            <a href="./exhausts.html">Exhausts</a>
 			</div>
 			</li>
 			<li id="nav-data" class="">
@@ -104,7 +104,7 @@
           <div>Where better to develop a prototype chassis with a unique suspension design than in the isle of man</div>
           <p style="margin-top:1em">
             
-            <a> href="./Introduction.html"
+            <a> href="./Introduction.html">
             <div class="share-button">
                Read The Reports
             </div>
@@ -118,6 +118,7 @@
     <div id="footer-background">
           <p> <span style="font: 3.5em 'Oswald', sans-serif"> PARKES </span> <br> The Road Race Motorcycle </p>
       </div>
+    <br>
     <div class="grid-wide-center">
       <h6>Photo courtesy of Dave Kneen Photography</h6>
     </div>
