title bar fixed

--- a/Events.html
+++ b/Events.html
@@ -127,7 +127,14 @@
       <div class="grid-wide-center">
         <h2>Results</h2>
         The bike has seen many revisions to the chassis and engine over the past 3 years. It has been seriously developed but yet the results have been consistantly poor, most races have been in preservation mode due to severly high engine temperatures. There was only one occasion when everything worked; qualifying in the wet at the southern 100 in 2015. The water spray has a brilliant capability to disspatae heat from the radiators. I was riding around many top flight bikes who were tip toeing around. I managed to qualify mid pack in the superbike race which was pleasing considering at the time I had 100hp less than the front runners.
-      </div>
+     <div class="image-center-container" width="290px">
+		<div class="banner4">
+		<a target="_blank" href="img/Resultsheet2.jpg">
+		<img src="img/Resultsheet.jpg" class="category-banner" alt="Southern100 timing sheet"></a>
+          <span class="image-text-banner">Southern 100 Results sheet</span>
+		  </div>
+		  </div>
+              </div>
         </div>
 		</div>
         <div id="footer-background">
