--- a/index.html
+++ b/index.html
@@ -20,14 +20,24 @@
 
     gtag('config', 'UA-112635987-1');
   </script>
+  
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+	  <script type="text/javascript" src="scripts/bootstrap.js"></script> 
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.0.1/jquery-migrate.min.js"></script>
     <script type='text/javascript' src="scripts/script.js"></script>
   
-  <script type="text/javascript" src="scripts/index.js"></script>
-
-
+  <style>
+      html {
+        background: url("img/mainback.jpg") no-repeat center center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+      }
+    </style>
+  
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
-
 <body id="body">
   <nav class="navbar navbar-inverse navbar-fixed top">
     <div class="container">
