change to wording in intro

--- a/Introduction.html
+++ b/Introduction.html
@@ -102,10 +102,10 @@
       <div class="main-container">
         <div class="grid-span">
           <h2>The history behind it</h2>
-          Back in 2012, I started to think that having raced many modern bikes I was lacking the satisfaction I was hoping for when I started racing. Reluctant to pursue a relentless story of refinement I
-          started to think about what was missing. What if I believed I could build something that would unlock that last tenth of commitment to go faster; something that was novel; experimental parts would be a risk but to go against the grain and start enjoying racing again I purchased a £900 VFR800 that looked like it had been dredged
-          up out of the sea. My plan was to always build a frame but what it would look like and what materials were mere minor details; it was going to happen.<br>
-          As the developments have progressed to this day; the only component I am still using from that bike is the fuel pump. The rest has been designed and made by myself using my own machines; predominantly manual with infrequent CNC work, along with extensive hand fabrication techniques such as welding, brazing, panel forming, vacuum infusion, clay moulding or for the few components I have
+          Back in 2012, I started to think that having raced many modern bikes I was lacking the satisfaction I was hoping for when I started racing. Reluctant to pursue a relentless story of refinement from the tune up catalogue I
+          started to think about what was missing from modern motorcycle racing. What if I believed I could build something that would unlock that last tenth of commitment to go faster; something that was novel; experimental parts would be a risk but to go against the grain and start enjoying racing again I purchased an old V4 derived VFR800 that looked like it had been dredged
+          up out of the sea. My plan was to always build a unique chassis but what it would look like and what materials were mere minor details; it was going to happen.<br>
+          As the developments have progressed to this day; the only component I am still using from that bike is the fuel pump. All components has been designed and made by myself using my own machines; predominantly manual with infrequent CNC work, along with extensive hand fabrication techniques such as welding, brazing, forming, vacuum infusion, clay moulding or for the few components I have
           not tackled such as brake calipers, wheels and crank casings; I have sourced elsewhere. The styling and designs are all my own work; right from the oil pump to the fairings. Some components only see minutes of use only to be stored in wake of new improved designs.
           <div class="image-right-container" width="350px">
 		  <div class="banner3">
@@ -124,7 +124,7 @@
           on my 1 year old Triumph 675R which got me to 15th in the southern 100 supersport 600 class before I got a chance to start pushing. <br>
 		  At the same time I had learned that working on other people's bikes and turning out tuned engines for club racers wasn't going to teach me more than I already knew.
           Time for change. You are what you do and to a certain extent; what you look like too. If I was going to work all day, every day; I would look like I had! If I only worked on everyone else’s bike I wouldn’t learn how to
-          build a chassis. I see no point in making what others can make better with more finance. What money can't buy is innovation, which inside a competitive environment comes hand in hand with adversity, risk and failure. All of which are necessary to make the bad; better! 
+          build a chassis. I see no point in making what others can make better with more finance. That's a guaranteed 2nd place for sure. What money can't buy is innovation, which inside a competitive environment comes hand in hand with adversity, risk and failure. All of which are necessary to make the bad; better! 
           
         </div>
       </div>
@@ -141,8 +141,7 @@
         
         Drying the sand and compressing it in to produce a hot bend in T45 tube took a lot of patience and perhaps a year of many bends to get that real feel for what’s
         going on. Every technical hurdle would spark a spell of research through textbooks but something I was always adamant of was to preserve my focus for first principle; steering away from any prior design. If it exists I’m not interested.
-		That way I felt my mind would have a greater chance of conjuring up something new which wasn’t a result of computer simulation pre-configured, logical algorithms which exist based on old theories
-        (what’s the point – at best you would just be copying someone else!). The following years have given me a massive understanding for metallurgy, thermal dynamics, aerodynamics as well as honing my patience. Many engines later and 3 rising rate suspension geometries have taught me a lot
+		That way I felt my mind would have a greater chance of conjuring up something new which wasn’t a result of computer simulation pre-configured, logical algorithms which exist based on old theories. The following years have given me a massive understanding for metallurgy, thermal dynamics, aerodynamics as well as honing my patience. Many engines later and 3 rising rate suspension geometries have taught me a lot
          and testing in the Isle of man has accelerated that rate 10 fold. Take a look at the technical journeys across the site and maybe look out for upcoming events… you’ll hear it coming for sure!
       <p>
 	  </div>
