--- a/Introduction.html
+++ b/Introduction.html
@@ -104,7 +104,7 @@
           <h2>The history behind it</h2>
           Back in 2012, I started to think that having raced many modern bikes I was lacking the satisfaction I was hoping for when I started racing. Reluctant to pursue a relentless story of refinement from the tune up catalogue I
           started to think about what was missing from modern motorcycle racing. What if I believed I could build something that would unlock that last tenth of commitment to go faster; something that was novel; experimental parts would be a risk but to go against the grain and start enjoying racing again I purchased an old V4 derived VFR800 that looked like it had been dredged
-          up out of the sea. My plan was to always build a unique chassis but what it would look like and what materials were mere minor details; it was going to happen.<br>
+          up out of the sea. My plan was to always build a unique chassis but what it would look like and how long it would take were mere minor details; it was going to happen.<br>
           As the developments have progressed to this day; the only component I am still using from that bike is the fuel pump. All components has been designed and made by myself using my own machines; predominantly manual with infrequent CNC work, along with extensive hand fabrication techniques such as welding, brazing, forming, vacuum infusion, clay moulding or for the few components I have
           not tackled such as brake calipers, wheels and crank casings; I have sourced elsewhere. The styling and designs are all my own work; right from the oil pump to the fairings. Some components only see minutes of use only to be stored in wake of new improved designs.
           <div class="image-right-container" width="350px">
@@ -121,10 +121,10 @@
           southern 100 amongst many club races for 2 years along with a 2nd modern bike to keep my eye in whilst I developed the VFR. The modern bikes kept me sharp for a while until a foolish crash in the Isle of Man in 2014 prompted me to make a change. When lying
           in the helicopter on the way Nobles hospital I decided that I was done with the boredom of modern racing. The hay days of sponsered rides were long gone and 
 		  at the time I had spent my hard earned money
-          on my 1 year old Triumph 675R which got me to 15th in the southern 100 supersport 600 class before I got a chance to start pushing. <br>
+          on my 1 year old Triumph 675R which got me to 15th in the southern 100 supersport 600 class and crashed it before I got a chance to start pushing. <br>
 		  At the same time I had learned that working on other people's bikes and turning out tuned engines for club racers wasn't going to teach me more than I already knew.
-          Time for change. You are what you do and to a certain extent; what you look like too. If I was going to work all day, every day; I would look like I had! If I only worked on everyone else’s bike I wouldn’t learn how to
-          build a chassis. I see no point in making what others can make better with more finance. That's a guaranteed 2nd place for sure. What money can't buy is innovation, which inside a competitive environment comes hand in hand with adversity, risk and failure. All of which are necessary to make the bad; better! 
+          Time for change. You are what you do and to a certain extent; what you look like too. If I was going to work all day, every day; I would look like it! If I only worked on everyone else’s bike I wouldn’t learn how to
+          build a chassis. I see no point in making what others can make better with more finance. That's a guaranteed 2nd place for sure. Money can't buy innovation, which inside a competitive environment comes hand in hand with adversity, risk and failure. All of which are necessary to make the bad; better! 
           
         </div>
       </div>
