--- a/Events.html
+++ b/Events.html
@@ -84,7 +84,7 @@
             <a href="./Gallery.html">Gallery</a>
             </li>
 			<li id="nav-data" class="">
-            <a href="./Sale.html">Sale</a>
+            <a href="./Sales.html">Sale and service</a>
 			</li>
 			</ul>
 			</div>
@@ -110,7 +110,7 @@
             <div class="main-container">
       <div class="grid-span">
         <h2>The development program</h2>
-        The bike has had a tough few years; typically 11 months of development and just 4 weeks out on the track for the past 3 years; with frequent frantic machining in that 4 weeks too! So 2018 will be more composed; perhaps using the isle of man race events as a first test was unorthodox? Or maybe I was over optimistic about it's potential. 2018 will be a healthier mix of UK based safe circuits to develop the chassis, experiment with swingarm lengths and monitor cooling characterisitcs as the further engine modifications are installed.
+        The bike has had a tough few years; typically 11 months of development and just a handful of sessions out on the track for the past 3 years; with frequent frantic machining in that 4 weeks too! So 2018 will be more composed; perhaps using the isle of man race events as a first test was unorthodox? Or maybe I was over optimistic about it's potential. 2018 will be a healthier mix of UK based safe circuits to develop the chassis, experiment with swingarm lengths and monitor cooling characterisitcs as the further engine modifications are installed.
       </div>
       <div class="grid-left-two">
         <h2>Club Racing</h2>
