--- a/Introduction.html
+++ b/Introduction.html
@@ -81,7 +81,7 @@
             <a href="./Gallery.html">Gallery</a>
             </li>
 			<li id="nav-data" class="">
-            <a href="./Sale.html">Sale</a>
+            <a href="./Sales.html">Sale and service</a>
 			</li>
 			</ul>
 			</div>
