--- a/Sales.html
+++ b/Sales.html
@@ -79,7 +79,7 @@
             <a href="./Gallery.html">Gallery</a>
             </li>
 			<li id="nav-data" class="">
-            <a href="./Sale.html">Sale</a>
+            <a href="./Sales.html">Sale and service</a>
 			</li>
 			</ul>
 			</div>
@@ -104,14 +104,14 @@
 
             <div class="main-container">
 			<div class="grid-span">
-	  		My next challenge is to design and make my own engine. Sand casting crankcases will require some savings to buy the necessary kit for the job. So I am putting up for sale some of the rare excotic race parts I have used to generate the funding. Keep an eye out in the coming future for more special parts up for sale.
+	  		My next challenge is to design and make my own engine. Sand casting crankcases will require some savings to buy the necessary kit for the job. So up for sale are some of the rare excotic race parts I have used over the years. Keep an eye out in the coming future for more special parts up for sale.
       </div>
 			
 			
       <div class="grid-span">
         <h2>Tony Scott RC45 52mm stroke crankshaft</h2>
-		This is supposidly the one remaining long stroke RC45 crankshaft; designed by Tony Scott and made by Honda on his behalf. Used by Milky Quale in the isle of man TT and most recently used by myself between 2017-2018. It has now been put up for sale to fund the manufacture of shorter stroke; higher revving engine.
-		What you get is the 52mm stroke crankshaft complete with Carrilo rods and bearing shells. The rods have completed approximately 100 race miles from new along with 4 hours of dyno tuning. They were custom made to my design by Carillo in America for £2000 but are suitable to take both standard and HRC RC45 pistons. The crankshaft is dynamically balanced with lead inserts into the counterweights to suit these rods and HRC pistons
+		I am led to believe this is the one remaining long stroke RC45 crankshaft; designed by Tony Scott and manufactured by Honda on his behalf. Used by Milky Quale in the isle of man TT and most recently used by myself between 2017-2018. It has now been put up for sale to fund the manufacture of shorter stroke; higher revving engine.
+		What you get is the 52mm stroke crankshaft complete with Carrilo rods and bearing shells. The rods have completed approximately 100 race miles of racing from new along with 4 hours of dyno tuning. They were custom made to my design by Carillo in America for £2000 and are suitable to take both standard and HRC RC45 pistons. The crankshaft is dynamically balanced with lead inserts into the counterweights to suit these rods and HRC pistons
 			<div class="banner">
 			<div class="banner2">
 			<a target="_blank" href="img/52mmcrank2.jpg">
@@ -146,7 +146,7 @@
 			
 			<div class="grid-span">
         <h2>HRC kit valve springs</h2>
-		Spare kit springs to suit a HRC head setup. These springs give much higher pressures at base and full lift to prevent unwanted valve reverberations and bounce at high RPM. The springs should be used with the right spring seats to set the correct installed height and pressure.
+		Spare kit springs to suit a HRC head setup. These springs give higher pressures at base and full lift to prevent unwanted valve reverberations and bounce at high RPM. The springs should be used with the right spring seats to set the correct installed height and pressure.
 		The springs are in immaculate condition; all measuring to new sizes.
 			<div class="banner">
 			<div class="banner2">
@@ -177,7 +177,7 @@
         <h2>Dry clutch conversion (Available 2019)</h2>
 		This kit comprises a new sand cast outter engine cover complete with output shaft seal. The clutch is a basket is machined from 7075 and hard anodised.
 		The kit is interchangeable between a vfr800 and RC45 using the same plates and spring tension.
-		With these race derived parts you can expect gains due to a reduction of components creating oil drag and less oil contamination through clutch plate degradation in the oil bath.
+		With these race derived parts you can expect small gains due to a reduction of components creating oil drag and less oil contamination through clutch plate degradation in the oil bath.
 		It would not be suitable to use this kit on the round as inadequate air flow to the clutch pack would cause accelerated damage to the plates.
 			<div class="banner">
 			<div class="banner2">
