--- a/Techjournals.html
+++ b/Techjournals.html
@@ -78,7 +78,7 @@
             <a href="./Gallery.html">Gallery</a>
             </li>
 			<li id="nav-data" class="">
-            <a href="./Sale.html">Sale</a>
+            <a href="./Sales.html">Sales and services</a>
 			</li>
           </ul>
         </div>
