update to sales wording

--- a/Sales.html
+++ b/Sales.html
@@ -111,7 +111,7 @@
       <div class="grid-span">
         <h2>Tony Scott RC45 52mm stroke crankshaft</h2>
 		I am led to believe this is the one remaining long stroke RC45 crankshaft; designed by Tony Scott and manufactured by Honda on his behalf. Used by Milky Quale in the isle of man TT and most recently used by myself between 2017-2018. It has now been put up for sale to fund the manufacture of shorter stroke; higher revving engine.
-		What you get is the 52mm stroke crankshaft complete with Carrilo rods and bearing shells. The rods have completed approximately 100 race miles of racing from new along with 4 hours of dyno tuning. They were custom made to my design by Carillo in America for £2000 and are suitable to take both standard and HRC RC45 pistons. The crankshaft is dynamically balanced with lead inserts into the counterweights to suit these rods and HRC pistons
+		What you get is the 52mm stroke crankshaft complete with Carrillo rods and bearing shells. The rods have completed approximately 100 miles of racing from new along with 4 hours of dyno tuning. They were custom made to my design by CP-Carrillo in America for £2000 and are suitable to take both standard and HRC RC45 pistons. The crankshaft is dynamically balanced with lead inserts into the counterweights to suit these rods and HRC pistons
 			<div class="banner">
 			<div class="banner2">
 			<a target="_blank" href="img/52mmcrank2.jpg">
@@ -123,8 +123,8 @@
 	  	  
       <div class="grid-left-two">
         <h2>HRC kit cylinder heads complete</h2>
-		These are a pair of kit cylinder heads used by Honda racing team. The valve springs, camshafts and spring washers are all kit components. The valve springs all measure within 0.1mm of each other showing excellent condition.
-      The cam sprockets are adjustable and are currently set to normally supplied kit specification:<pr>
+		These are a pair of kit cylinder heads used by Honda racing team. The valve springs, camshafts and spring washers are all HRC kit specification. The valve springs all measure within 0.1mm of each other showing excellent condition.
+      The cam sprockets are adjustable and I have set them back to the standard HRC kit specification:<pr>
 	  inlet opens 23 btdc<pr>
       closes 52 abdc<pr>
 	  exhaust opens 50 bbdc<pr>
