--- a/Sales.html
+++ b/Sales.html
@@ -123,19 +123,19 @@
 	  	  
       <div class="grid-left-two">
         <h2>HRC kit cylinder heads complete</h2>
-		These are a pair of kit cylinder heads used by Honda racing team. The valve springs, camshafts and spring washers are all HRC kit specification. The valve springs all measure within 0.1mm of each other showing excellent condition.
-      The cam sprockets are adjustable and I have set them back to the standard HRC kit specification:<pr>
-	  inlet opens 23 btdc<pr>
-      closes 52 abdc<pr>
-	  exhaust opens 50 bbdc<pr>
-	  closes 20 atdc <pr>
-	  (measured at 1mm lift)<pr>
-	  The specification of the lift:<pr>
-	  Exhaust: 8.5mm <pr>
-	  Inlet: 9.5mm <pr>
+        These are a pair of kit cylinder heads used by Honda racing team. The valve springs, camshafts and spring washers are all HRC kit specification. The valve springs all measure within 0.1mm of each other showing excellent condition.
+      The cam sprockets are adjustable and I have set them back to the standard HRC kit specification:<br />
+	  inlet opens 23 btdc<br />
+      closes 52 abdc<br />
+	  exhaust opens 50 bbdc<br />
+	  closes 20 atdc <br />
+	  (measured at 1mm lift)<br />
+	  The specification of the lift:<br />
+	  Exhaust: 8.5mm <br />
+	  Inlet: 9.5mm <br />
 	  Be advised that you should check your piston to valve clearance on assembly to ensure adequate clearance for your application as the inlet in particular has higher lift than standard
 	  The cam sprockets are interchangable between front and rear sprockets and allow material to be skimmed off the cylinder head to reduce gear backlash and raise compression. This is achieved due to the cam sprockets being marginally undersize. The amount they are undersize is stamped on each sprocket (0.5mm and 0.6mm options). The sprockets are interchangable between inlet and exhaust aswell as between front and rear cylinder heads.
-			<div class="banner">
+			   <div class="banner">
 			<div class="banner2">
 			<a target="_blank" href="img/hrcheads2.jpg">
 			<img src="img/hrcheads.jpg" class="category-banner" alt="HRC cylinder heads"></a>
@@ -163,7 +163,7 @@
 		The primary and secondary pipe sizes used are very similar to that of a WSB HRC RC45 and work best with throttle bodies between 42-45mm bore size.
 		The primary lengths are slightly uneven in length to give a broader torque range. See the attached dyno file to show the power produced using this exhaust system. Note that in order to benefit from this system, larger throttle bodies, high lift camshaft with longer duration and ported cylinder heads are required, as well as refined fuelling and igntion adjustment. The dyno chart attached was from a tuned engine with all of these along with 42mm throttle bodies in an 838cc engine.
 		The system was made using 0.9mm thick stainless steel. The end cans are PARKES titanium design and weigh just 0.5kg each.
-		The full system weighs .....
+		The full system weighs 
 			<div class="banner">
 			<div class="banner2">
 			<a target="_blank" href="img/exhaust_system2.jpg">
@@ -174,7 +174,7 @@
 			</div>
 		
       <div class="grid-narrow-center">
-        <h2>Dry clutch conversion (Available 2019)</h2>
+        <h2>Dry clutch conversion (Available mid 2019)</h2>
 		This kit comprises a new sand cast outter engine cover complete with output shaft seal. The clutch is a basket is machined from 7075 and hard anodised.
 		The kit is interchangeable between a vfr800 and RC45 using the same plates and spring tension.
 		With these race derived parts you can expect small gains due to a reduction of components creating oil drag and less oil contamination through clutch plate degradation in the oil bath.
@@ -190,8 +190,8 @@
 			
 	  		<div class="grid-narrow-center">
         <h2>Race silencers</h2>
-		PARKES exhausts cans with optional db killer inserts. All fabricated from 0.9mm grade 2 titanium. Cans are avaliable in different lengths and mounting options.
-		All cans are fabricated and fusion welded by hand so please be aware there is a 4 week manufacture and delivery lead time for every order.
+		PARKES exhausts cans with optional db killer inserts. Extensively fabricated from 0.9mm grade 2 titanium. Cans are avaliable in different lengths and mounting options.
+		All cans are fabricated and fusion welded by hand so please be aware there is a 4 week lead time for every can made.
 			<div class="image-left-container" width="430px">
             <div class="banner">
 			<div class="banner2">
