--- a/Sales.html
+++ b/Sales.html
@@ -10,7 +10,15 @@
     <link rel="stylesheet" href="stylesheets/screenintro.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
-    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112635987-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-112635987-1');
+</script>
 	
 	<script
 	  src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -134,7 +142,7 @@
 	  Exhaust: 8.5mm <br />
 	  Inlet: 9.5mm <br />
 	  Be advised that you should check your piston to valve clearance on assembly to ensure adequate clearance for your application as the inlet in particular has higher lift than standard
-	  The cam sprockets are interchangable between front and rear sprockets and allow material to be skimmed off the cylinder head to reduce gear backlash and raise compression. This is achieved due to the cam sprockets being marginally undersize. The amount they are undersize is stamped on each sprocket (0.5mm and 0.6mm options). The sprockets are interchangable between inlet and exhaust aswell as between front and rear cylinder heads.
+	  The cam sprockets are interchangable between front and rear cams and allow material to be skimmed off the cylinder head to reduce gear backlash and raise compression. This is achieved due to the cam sprockets being marginally undersize. The amount they are undersize is stamped on each sprocket (0.5mm and 0.6mm options). The sprockets are interchangable between inlet and exhaust aswell as between front and rear cylinder heads.
 			   <div class="banner">
 			<div class="banner2">
 			<a target="_blank" href="img/hrcheads2.jpg">
