sales ex images

--- a/Sales.html
+++ b/Sales.html
@@ -168,22 +168,37 @@
       <div class="grid-wide-center">
         <h2>Exhausts</h2>
 		Here for sale is a 4-2 lobster section exhaust system to suit a vfr800. The system is designed to work with cylinders firing on 450 degree separation so that the scavenging effect pulls exhaust gases from the linked cylinders to best aid mid range gas flow.
-		The primary and secondary pipe sizes used are very similar to that of a WSB HRC RC45 and work best with throttle bodies between 42-45mm bore size.
-		The primary lengths are slightly uneven in length to give a broader torque range. See the attached dyno file to show the power produced using this exhaust system. Note that in order to benefit from this system, larger throttle bodies, high lift camshaft with longer duration and ported cylinder heads are required, as well as refined fuelling and igntion adjustment. The dyno chart attached was from a tuned engine with all of these along with 42mm throttle bodies in an 838cc engine.
-		The system was made using 0.9mm thick stainless steel. The end cans are PARKES titanium design and weigh just 0.5kg each.
-		The full system weighs 
+		The primary and secondary pipe sizes used are very similar to that of a WSB HRC RC45 and work best with throttle bodies between 43-45mm bore size.
+		The primary lengths are intentionally uneven in length to give a broader torque range. See the attached dyno file to show the power produced using this exhaust system. Note that in order to benefit from this system, larger throttle bodies, high lift camshaft with longer duration and ported cylinder heads are required, as well as refined fuelling and igntion adjustment. The dyno chart attached was from a tuned engine with all of these along with 43mm throttle bodies in an 838cc engine.
+		The system was made using 0.9mm thick stainless steel. Titanium silencers can be made to order separately and weigh just 0.5kg each.
+		The exhaust system was used exclusively on a race bike and such the rearward mounting bracket will not directly fit to a road subframe unit. An additional bracket will need to be fabricated to support the rear of the exhaust.
 			<div class="banner">
 			<div class="banner2">
-			<a target="_blank" href="img/exhaust_system2.jpg">
-			<img src="img/exhaust_system.jpg" class="category-banner" alt="VFR800 exhaust system"></a>
+			<a target="_blank" href="img/VFRex1.jpg">
+			<img src="img/VFRex1.jpg" class="category-banner" alt="VFR800 exhaust"></a>
 			<span class="image-text-banner">VFR800 exhaust system</span>
 			</div>
+        <div class="banner2">
+			<a target="_blank" href="img/VFRex2.jpg">
+			<img src="img/VFRex2.jpg" class="category-banner" alt="VFRexhaust"></a>
+			<span class="image-text-banner">2</span>
+			</div>	
+			<div class="banner2">	
+			<a target="_blank" href="img/VFRex3.jpg">
+			<img src="img/VFRex3.jpg" class="category-banner" alt="VFRexhaust"></a>
+			<span class="image-text-banner">3</span>
+			</div>	
+			<div class="banner2">	
+			<a target="_blank" href="img/VFRex4.jpg">
+			<img src="img/VFRex4.jpg" class="category-banner" alt="VFRexhaust"></a>
+			<span class="image-text-banner">4</span>
+			</div>	
 		    </div>
 			</div>
 		
       <div class="grid-narrow-center">
-        <h2>Dry clutch conversion (Available mid 2019)</h2>
-		This kit comprises a new sand cast outter engine cover complete with output shaft seal. The clutch is a basket is machined from 7075 and hard anodised.
+        <h2>Slipper clutch conversion (Available mid 2019)</h2>
+		This kit comprises a new sand cast outter engine cover. The clutch is a basket is machined from 7075 and hard anodised.
 		The kit is interchangeable between a vfr800 and RC45 using the same plates and spring tension.
 		With these race derived parts you can expect small gains due to a reduction of components creating oil drag and less oil contamination through clutch plate degradation in the oil bath.
 		It would not be suitable to use this kit on the round as inadequate air flow to the clutch pack would cause accelerated damage to the plates.
