sales ex tweaks

--- a/Sales.html
+++ b/Sales.html
@@ -168,31 +168,37 @@
       <div class="grid-wide-center">
         <h2>Exhausts</h2>
 		Here for sale is a 4-2 lobster section exhaust system to suit a vfr800. The system is designed to work with cylinders firing on 450 degree separation so that the scavenging effect pulls exhaust gases from the linked cylinders to best aid mid range gas flow.
-		The primary and secondary pipe sizes used are very similar to that of a WSB HRC RC45 and work best with throttle bodies between 43-45mm bore size.
+		The primary and secondary pipe sizes used are a larger diameter than standard and work best with throttle bodies between 43-45mm bore size and high lift cam's with medium to long duration.
 		The primary lengths are intentionally uneven in length to give a broader torque range. See the attached dyno file to show the power produced using this exhaust system. Note that in order to benefit from this system, larger throttle bodies, high lift camshaft with longer duration and ported cylinder heads are required, as well as refined fuelling and igntion adjustment. The dyno chart attached was from a tuned engine with all of these along with 43mm throttle bodies in an 838cc engine.
-		The system was made using 0.9mm thick stainless steel. Titanium silencers can be made to order separately and weigh just 0.5kg each.
-		The exhaust system was used exclusively on a race bike and such the rearward mounting bracket will not directly fit to a road subframe unit. An additional bracket will need to be fabricated to support the rear of the exhaust.
+		This system was made using 0.9mm thick stainless steel. <br />
+        Titanium silencers can be made to order separately and weigh just 0.5kg each.
+		The exhaust system was used exclusively on a race bike and as such the rearward mounting bracket will not directly fit to a road subframe unit. Assume you will need to fabricate an additional bracket to support the rear of the exhaust system.
 			<div class="banner">
 			<div class="banner2">
 			<a target="_blank" href="img/VFRex1.jpg">
 			<img src="img/VFRex1.jpg" class="category-banner" alt="VFR800 exhaust"></a>
-			<span class="image-text-banner">VFR800 exhaust system</span>
+			<span class="image-text-banner">Underside view</span>
 			</div>
         <div class="banner2">
 			<a target="_blank" href="img/VFRex2.jpg">
 			<img src="img/VFRex2.jpg" class="category-banner" alt="VFRexhaust"></a>
-			<span class="image-text-banner">2</span>
+			<span class="image-text-banner">Carbon heel guard included</span>
 			</div>	
 			<div class="banner2">	
 			<a target="_blank" href="img/VFRex3.jpg">
 			<img src="img/VFRex3.jpg" class="category-banner" alt="VFRexhaust"></a>
-			<span class="image-text-banner">3</span>
+			<span class="image-text-banner">Left side view</span>
 			</div>	
 			<div class="banner2">	
 			<a target="_blank" href="img/VFRex4.jpg">
 			<img src="img/VFRex4.jpg" class="category-banner" alt="VFRexhaust"></a>
-			<span class="image-text-banner">4</span>
+			<span class="image-text-banner">Front view</span>
 			</div>	
+        <div class="banner2">	
+			<a target="_blank" href="img/vfr838dyno.jpg">
+			<img src="img/vfr838dyno.jpg" class="category-banner" alt="Dyno Print"></a>
+			<span class="image-text-banner">VFR838cc dyno print</span>
+			</div>
 		    </div>
 			</div>
 		
